--- a/NBUY_REF.Entities/NBUY_REF.Entities.csproj
+++ b/NBUY_REF.Entities/NBUY_REF.Entities.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AboutPage.cs" />
+    <Compile Include="ContactPage.cs" />
+    <Compile Include="IndexPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
