--- a/NBUY_REF/NBUY_REF.csproj
+++ b/NBUY_REF/NBUY_REF.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\img\500x450.png" />
     <Content Include="Content\lib\bootstrap\css\bootstrap.css" />
     <Content Include="Content\lib\bootstrap\js\bootstarp.js" />
     <Content Include="Content\lib\jQuery\jquery-3.3.1.js" />
@@ -124,7 +125,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\fonts\" />
-    <Folder Include="Content\img\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
