--- a/NBUY_REF/Views/web.config
+++ b/NBUY_REF/Views/web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="NBUY_REF" />
         <add namespace="NBUY_REF.Entities" />        
+        <add namespace="NBUY_REF.Models" />        
+             
       </namespaces>
     </pages>
   </system.web.webPages.razor>
